--- a/.github/workflows/translate.yaml
+++ b/.github/workflows/translate.yaml
@@ -12,9 +12,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: DeepL Translate Github Action
-        uses: lyqht/deepl-translate-github-action@v2
+        uses: lyqht/deepl-translate-github-action@v2.1
         with:
           target_languages: es
-          input_file_path: episodes/01-intro.md
-          output_file_name_pattern: episodes/{language}/01-intro.md
+          input_file_path: ./index.md
+          output_file_name_pattern: ./{language}/index.md
           deepl_api_key: ${{ secrets.DEEPL_API_KEY }}
